compilation fixes